tests/NormalTests/paczka1/small_fuzzy/27890880.err
Error in line 3: S823 S823 69,6
Error in line 14: q5CKIhjA A902 96,.
